# climate-dash

./: .env.template  README.md  pyproject.toml  run_extractors.py
.github/workflows/: action.yaml
Data/Summary Data/: BC_by_CD.csv  NO2_by_CD.csv  NO_by_CD.csv  O3_by_CD.csv  PM25_by_CD.csv  bicycle_lane_miles.csv  bike_parking_spaces.csv  diversion_rate.csv  electric_vehicles_registered.csv  energy_star_scores__count_and_proportion_by_grade.csv  ev_fleet_count.csv  ghg_emissions__buildings_by_sector_by_fuel.csv  ghg_emissions__buildings_change.csv  ghg_emissions__total_by_sector.csv  ghg_emissions__transportation_change.csv  organics_collection_buildings.csv  solar_annual_to_meet_goal.csv  solar_installed_mw_by_year.csv  solar_installed_remaining.csv
climate_dash_tools/: extract.py  logging_config.py  transform.py
pipelines/: air_quality.py  bicycle_lane_miles.py  bike_parking_spaces.py  diversion_rate.py  electric_vehicles_registered.py  energy_star_scores.py  ev_fleet_count.py  ev_fleet_station_network.py  ghg_emissions.py  installed_solar.py  organics_collection_buildings.py  template_pipeline.py
pipelines/extract/: bike_parking_spaces.py  diversion_rate.py  electric_vehicles_registered.py  energy_star_scores.py  ev_fleet_count.py  ev_fleet_station_network.py  ghg_emissions.py  installed_solar.py
